--- a/assistant/package.json
+++ b/assistant/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node build.js",
-    "start": "npm run build && node index.js",
+    "start": "npm run build && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "symphony-api-client-node": "^1.0.4"
   },
   "devDependencies": {
-    "mustache": "^3.0.3"
+    "mustache": "^3.0.3",
+    "nodemon": "^1.19.2"
   }
 }
