--- a/faq-server/package.json
+++ b/faq-server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "koa": "^2.8.1",
     "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "node-nlp": "^3.8.0"
   }
 }
